--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
+    <!-- Added link to Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet">
 	<!-- Added a media query so print doesn't render block-->
     <link href="css/print.css" rel="stylesheet" media="print">
