modified css to streamline body

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
-      // replaced with your Google Analytics profile ID.
+      // replaced with Google Analytics profile ID.
       ga('create', 'UA-69338540-1', 'auto');
       ga('send', 'pageview');
     </script>
