--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <!-- Added link to Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 	<!-- Added a media query so print doesn't render block-->
-    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/print.min.css" rel="stylesheet" media="print">
 
   </head>
 
